force-app/main/default/objects/Opportunity/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <formula>TEXT(Account.BillingStateCode)</formula>
    <label>Account State</label>
    <type>Text</type>
</CustomField>