force-app/main/default/objects/Opportunity/fields/Active_Email_Population__c.field-meta.xml
<CustomField>
    <fullName>Active_Email_Population__c</fullName>
    <inlineHelpText>Number of people who will receive an email promoting our benefit</inlineHelpText>
    <label>Active Email Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>