force-app/main/default/objects/Opportunity/fields/Actual_Go_Live_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_Go_Live_Year__c</fullName>
    <formula>TEXT(YEAR( Go_Live_Date__c ))</formula>
    <label>Actual Go Live Year</label>
    <type>Text</type>
</CustomField>