force-app/main/default/objects/Opportunity/fields/Additional_Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box for B2B Oppty</description>
    <inlineHelpText>Please review Notes and Attachment for additional phone numbers</inlineHelpText>
    <label>Additional Phone Numbers</label>
    <type>Checkbox</type>
</CustomField>