force-app/main/default/objects/Opportunity/fields/Affiliated_or_Non_Affiliated__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_or_Non_Affiliated__c</fullName>
    <label>Affiliated or Non-Affiliated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliated</fullName>
            </value>
            <value>
                <fullName>Non-Affiliated</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>