force-app/main/default/objects/Opportunity/fields/Age_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Opportunity__c</fullName>
    <description>Displays the Age of an Opportunity by checking whether Opportunity is Closed or not</description>
    <formula>If(IsClosed,CloseDate - DATEVALUE(CreatedDate),DATEVALUE(Now())- DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>