force-app/main/default/objects/Opportunity/fields/Annual_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Commitment?</label>
    <type>Checkbox</type>
</CustomField>