force-app/main/default/objects/Opportunity/fields/Annual_Lending_Size__c.field-meta.xml
<CustomField>
    <fullName>Annual_Lending_Size__c</fullName>
    <label>Annual Lending Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>