force-app/main/default/objects/Opportunity/fields/Approval_Sent__c.field-meta.xml
<CustomField>
    <fullName>Approval_Sent__c</fullName>
    <description>Populates the date when the Opportunity is submitted for Approval</description>
    <label>Approval Sent</label>
    <type>Date</type>
</CustomField>