force-app/main/default/objects/Opportunity/fields/Asset_Base__c.field-meta.xml
<CustomField>
    <fullName>Asset_Base__c</fullName>
    <label>Asset Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>