force-app/main/default/objects/Opportunity/fields/Assigned_Market_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Market_Manager__c</fullName>
    <formula>IF(
Channel_Type__c = &apos;Real Estate&apos;, 

(StateLookup__r.Market_Manager_Real_Estate__r.FirstName + &apos; &apos; + StateLookup__r.Market_Manager_Real_Estate__r.LastName),

(StateLookup__r.Market_Manager_Corporate__r.FirstName + &apos; &apos; + StateLookup__r.Market_Manager_Corporate__r.LastName)
 
)</formula>
    <label>Assigned Market Manager</label>
    <type>Text</type>
</CustomField>