force-app/main/default/objects/Opportunity/fields/Association_Type__c.field-meta.xml
<CustomField>
    <fullName>Association_Type__c</fullName>
    <label>Association Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>