force-app/main/default/objects/Opportunity/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank</label>
    <type>Checkbox</type>
</CustomField>