force-app/main/default/objects/Opportunity/fields/Benefit_Fair1__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Fair1__c</fullName>
    <label>Benefit Fair</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>