force-app/main/default/objects/Opportunity/fields/Benefit_Fair__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Fair__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there benefit fairs that we can participate in?</inlineHelpText>
    <label>Benefit Fair</label>
    <type>Checkbox</type>
</CustomField>