force-app/main/default/objects/Opportunity/fields/Benefit_Fair_Details__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Fair_Details__c</fullName>
    <label>Benefit Fair Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>