force-app/main/default/objects/Opportunity/fields/Benefit_Offer_Details__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Offer_Details__c</fullName>
    <label>Benefit Offer Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>