force-app/main/default/objects/Opportunity/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Partner</fullName>
            </value>
            <value>
                <fullName>Member Rewards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>