force-app/main/default/objects/Opportunity/fields/Branch_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Phone_Number__c</fullName>
    <label>Branch Phone Number</label>
    <type>Phone</type>
</CustomField>