force-app/main/default/objects/Opportunity/fields/Business_Days_Elapsed_in_Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_Elapsed_in_Current_Quarter__c</fullName>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATE(2020,7,1) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE(2020,7,1) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <label>Business Days Elapsed in Current Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>