force-app/main/default/objects/Opportunity/fields/Business_Days_Elapsed_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_Elapsed_This_Month__c</fullName>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days Elapsed This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>