force-app/main/default/objects/Opportunity/fields/Business_Days_Elapsed_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_Elapsed_This_Year__c</fullName>
    <formula>((( FLOOR ( ( TODAY() - DATE (1900,01,01) ) / 7 ) *5 )
+ MIN ( 5, MOD ( TODAY() - DATE (1900,01,01), 7 ) +1 ))
-
(( FLOOR ( ( DATE(YEAR(TODAY()),1,1) - DATE (1900,01,01) ) / 7 ) *5)
+ MIN ( 5, MOD ( DATE(YEAR(TODAY()),1,1) - DATE (1900,01,01), 7 ) )
))-5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days Elapsed This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>