force-app/main/default/objects/Opportunity/fields/Business_Days_in_the_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_in_the_Current_Year__c</fullName>
    <formula>((5 * ( FLOOR( ( DATE(2019,12,31) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE(2019,12,31) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATE(2019,1,1) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE(2019,1,1) - DATE( 1900, 1, 8), 7 ) ) ))-6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days in the Current Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>