force-app/main/default/objects/Opportunity/fields/Business_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Opportunity__c</fullName>
    <label>Business Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>