force-app/main/default/objects/Opportunity/fields/Channel_Match__c.field-meta.xml
<CustomField>
    <fullName>Channel_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Match</label>
    <type>Checkbox</type>
</CustomField>