force-app/main/default/objects/Opportunity/fields/Client_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User for Relo Oppty</description>
    <label>Partner Services Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>