force-app/main/default/objects/Opportunity/fields/Closed_Loan_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Closed_Loan_Revenue__c</fullName>
    <formula>(Closed_Loan_Volume__c) * (0.02)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Loan Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>