force-app/main/default/objects/Opportunity/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <inlineHelpText>1-2 sentence description of what the company does.</inlineHelpText>
    <label>CompanyDescription</label>
    <type>TextArea</type>
</CustomField>