force-app/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>Baxter Credit Union</fullName>
            </value>
            <value>
                <fullName>Berkshire Hathaway Mortgage</fullName>
            </value>
            <value>
                <fullName>Better Mortgage</fullName>
            </value>
            <value>
                <fullName>Box Home Loans</fullName>
            </value>
            <value>
                <fullName>Caliber Home Loans</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Citi Bank</fullName>
            </value>
            <value>
                <fullName>Colonial National Mortgage</fullName>
            </value>
            <value>
                <fullName>GMAC</fullName>
            </value>
            <value>
                <fullName>GMH Mortgage</fullName>
            </value>
            <value>
                <fullName>Guaranteed Rate</fullName>
            </value>
            <value>
                <fullName>HomeServices/BHHS</fullName>
            </value>
            <value>
                <fullName>Huntington</fullName>
            </value>
            <value>
                <fullName>Internal Credit Union</fullName>
            </value>
            <value>
                <fullName>New Penn Financial</fullName>
            </value>
            <value>
                <fullName>Paragon/CLG</fullName>
            </value>
            <value>
                <fullName>PennyMac</fullName>
            </value>
            <value>
                <fullName>PHH</fullName>
            </value>
            <value>
                <fullName>Plus Relocation Mortgage</fullName>
            </value>
            <value>
                <fullName>PNC</fullName>
            </value>
            <value>
                <fullName>Premia</fullName>
            </value>
            <value>
                <fullName>Prime Lending</fullName>
            </value>
            <value>
                <fullName>Provident Funding</fullName>
            </value>
            <value>
                <fullName>Ruoff Mortgage</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Sibcy Cline</fullName>
            </value>
            <value>
                <fullName>Sirva</fullName>
            </value>
            <value>
                <fullName>Everbank</fullName>
                <label>TIAA</label>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>