force-app/main/default/objects/Opportunity/fields/Completed_Group_Emails__c.field-meta.xml
<CustomField>
    <fullName>Completed_Group_Emails__c</fullName>
    <label>Completed Group Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>