force-app/main/default/objects/Opportunity/fields/Completed_Solo_Emails__c.field-meta.xml
<CustomField>
    <fullName>Completed_Solo_Emails__c</fullName>
    <label>Completed Solo Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>