force-app/main/default/objects/Opportunity/fields/Completed_Specialized_Web_Placements__c.field-meta.xml
<CustomField>
    <fullName>Completed_Specialized_Web_Placements__c</fullName>
    <label>Completed Specialized Web Placements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>