force-app/main/default/objects/Opportunity/fields/Condo_Hub__c.field-meta.xml
<CustomField>
    <fullName>Condo_Hub__c</fullName>
    <label>Condo Hub #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>