force-app/main/default/objects/Opportunity/fields/Contact_Agent__c.field-meta.xml
<CustomField>
    <fullName>Contact_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Agent Contact)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>