force-app/main/default/objects/Opportunity/fields/Contact_Presented_To__c.field-meta.xml
<CustomField>
    <fullName>Contact_Presented_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the contact presented to</description>
    <label>Contact Presented To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact Presented To)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>