force-app/main/default/objects/Opportunity/fields/Contacts_with_no_Call_or_F2F__c.field-meta.xml
<CustomField>
    <fullName>Contacts_with_no_Call_or_F2F__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contacts with no Call or F2F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>