force-app/main/default/objects/Opportunity/fields/Current_Biz_Dev_Members__c.field-meta.xml
<CustomField>
    <fullName>Current_Biz_Dev_Members__c</fullName>
    <label>Current Biz Dev Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>