force-app/main/default/objects/Opportunity/fields/Current_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Start_Date__c</fullName>
    <label>Current Contract Start Date</label>
    <type>Date</type>
</CustomField>