force-app/main/default/objects/Opportunity/fields/Current_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Current_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Sponsor</label>
    <type>Checkbox</type>
</CustomField>