force-app/main/default/objects/Opportunity/fields/Days_Active__c.field-meta.xml
<CustomField>
    <fullName>Days_Active__c</fullName>
    <description>Days partner is active.</description>
    <formula>IF((ISPICKVAL(StageName, &quot;Active&quot;) &amp;&amp; (!ISNULL(Go_Live_Date__c))), Go_Live_Date__c - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days partner is active.</inlineHelpText>
    <label>Days Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>