force-app/main/default/objects/Opportunity/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Decision Maker for Opportunity</description>
    <label>Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Decision Maker)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>