force-app/main/default/objects/Opportunity/fields/Dedicated_Email_Blast__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Email_Blast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this company send emails that solely promote our offer?</inlineHelpText>
    <label>Solo Email</label>
    <type>Checkbox</type>
</CustomField>