force-app/main/default/objects/Opportunity/fields/Dedicated_Email_Blast_Details__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Email_Blast_Details__c</fullName>
    <label>Solo Email Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>