force-app/main/default/objects/Opportunity/fields/Dedicated_Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Marketing_Email__c</fullName>
    <description>Email field for B2B Oppty</description>
    <label>Dedicated Marketing Email</label>
    <type>Email</type>
</CustomField>