force-app/main/default/objects/Opportunity/fields/Dedicated_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Toll_Free__c</fullName>
    <label>Dedicated Toll-Free</label>
    <type>Phone</type>
</CustomField>