force-app/main/default/objects/Opportunity/fields/Direct_Bill_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Direct_Bill_Invoices__c</fullName>
    <description>Email address of where to send the direct bill invoices</description>
    <inlineHelpText>Email address for direct bill invoices</inlineHelpText>
    <label>Direct Bill Invoices</label>
    <type>Email</type>
</CustomField>