force-app/main/default/objects/Opportunity/fields/Direct_Bill_Invoices_addtional__c.field-meta.xml
<CustomField>
    <fullName>Direct_Bill_Invoices_addtional__c</fullName>
    <description>For partners that use multiple email addresses</description>
    <inlineHelpText>For partners with multiple processing addresses</inlineHelpText>
    <label>Direct Bill Invoices (addtional)</label>
    <type>Email</type>
</CustomField>