force-app/main/default/objects/Opportunity/fields/Direct_Mail__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we send direct mail to the company&apos;s employees?</inlineHelpText>
    <label>Direct Mail</label>
    <type>Checkbox</type>
</CustomField>