force-app/main/default/objects/Opportunity/fields/Direct_Mail_Details__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail_Details__c</fullName>
    <label>Direct Mail Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>