force-app/main/default/objects/Opportunity/fields/Domestic_Employees__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Employees__c</fullName>
    <description>Number of employees in the US</description>
    <label>Domestic Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>