force-app/main/default/objects/Opportunity/fields/Employee_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Employee_Greeting__c</fullName>
    <description>What a partner calls its employees (Quicken Loans Team Members, Oracle Employees, BCBS Associates)</description>
    <inlineHelpText>What a partner calls its employees (Quicken Loans Team Members, Oracle Employees, BCBS Associates)</inlineHelpText>
    <label>Employee Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>