force-app/main/default/objects/Opportunity/fields/Exclude_Rocket_Homes__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Rocket_Homes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Rocket Homes?</label>
    <type>Checkbox</type>
</CustomField>