force-app/main/default/objects/Opportunity/fields/Expected_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Expected_Opportunity__c</fullName>
    <label>Expected Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>