force-app/main/default/objects/Opportunity/fields/Expected_Revenue_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Formula__c</fullName>
    <formula>IF( Channel_Type__c  = &apos;Relo&apos;,  Expected_Opportunity__c  * 0.17 * 300000 * 0.0275, IF(and(Channel_Type__c  = &apos;MI&apos;,Domestic_Employees__c &gt; 30000),Domestic_Employees__c * 0.001 * 0.1 * 210000 * 0.035, IF(and(Channel_Type__c  = &apos;MI&apos;,Domestic_Employees__c &lt; 30000),Domestic_Employees__c * 0.005 * 0.1 * 210000 * 0.035,0 )))</formula>
    <inlineHelpText>Relocation:
Expected Opportunity * .18 = Total Number of Loans * 275,000 = Total Closed Volume * 0.03 = Expected Revenue

Mortgage Insiders:
Expected Opportunity * .09 = Total Number of Loans * 5,300 = Expected Revenue</inlineHelpText>
    <label>Annual Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>