force-app/main/default/objects/Opportunity/fields/Expected_Revenue_Manual__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Manual__c</fullName>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>