force-app/main/default/objects/Opportunity/fields/Expected_US_Homeowner_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Expected_US_Homeowner_Opportunity__c</fullName>
    <label>Expected US Homeowner Opportunit\y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>