force-app/main/default/objects/Opportunity/fields/External_Implementation_Complete__c.field-meta.xml
<CustomField>
    <fullName>External_Implementation_Complete__c</fullName>
    <description>Has the external partner implementation occurred?</description>
    <label>External Implementation Complete</label>
    <type>Date</type>
</CustomField>