force-app/main/default/objects/Opportunity/fields/First_Year_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Expected_Revenue__c</fullName>
    <formula>((DATE(YEAR(Target_Live_Date__c), 12, 31) - Target_Live_Date__c) / 365) *
Expected_Revenue_Formula__c</formula>
    <label>First Year Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>