force-app/main/default/objects/Opportunity/fields/Flash_Sale__c.field-meta.xml
<CustomField>
    <fullName>Flash_Sale__c</fullName>
    <label>Flash Sale?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>