force-app/main/default/objects/Opportunity/fields/Gift_Restriction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_Restriction_Amount__c</fullName>
    <label>Gift Restriction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>