force-app/main/default/objects/Opportunity/fields/Gift_Restriction_Details__c.field-meta.xml
<CustomField>
    <fullName>Gift_Restriction_Details__c</fullName>
    <label>Gift Restriction Details</label>
    <type>TextArea</type>
</CustomField>