force-app/main/default/objects/Opportunity/fields/Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Group_Email__c</fullName>
    <label>Group Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>